--- a/src/views/pages/feriados.ejs
+++ b/src/views/pages/feriados.ejs
@@ -142,8 +142,8 @@
                         <table class="cashflow-table" id="feriadosTable">
                             <thead>
                                 <tr>
-                                    <th>Fecha</th>
-                                    <th>Nombre</th>
+                                    <th style="width: 120px !important; max-width: 120px !important; min-width: 120px !important; text-align: center !important;">Fecha</th>
+                                    <th style="text-align: center !important;">Nombre</th>
                                 </tr>
                             </thead>
                             <tbody id="feriadosTableBody">
